force-app/main/default/objects/Integration_Endpoint__mdt/Integration_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>Integration Endpoint</label>
    <pluralLabel>Integration Endpoints</pluralLabel>
    <description>API endpoint definitions — base URL, path, HTTP method, headers</description>
</CustomObject>