force-app/main/default/objects/Integration_Endpoint__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <label>Base URL</label>
    <type>Url</type>
    <required>true</required>
    <description>Base URL of the external API</description>
</CustomField>