force-app/main/default/objects/Integration_Endpoint__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Text</type>
    <length>100</length>
    <defaultValue>&quot;application/json&quot;</defaultValue>
    <description>Content-Type header value</description>
</CustomField>