force-app/main/default/objects/Integration_Endpoint__mdt/fields/Custom_Headers__c.field-meta.xml
<CustomField>
    <fullName>Custom_Headers__c</fullName>
    <label>Custom Headers</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON string of extra headers</description>
</CustomField>