force-app/main/default/objects/Integration_Endpoint__mdt/fields/HTTP_Method__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Method__c</fullName>
    <label>HTTP Method</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>GET</fullName><default>false</default><label>GET</label></value>
            <value><fullName>POST</fullName><default>true</default><label>POST</label></value>
            <value><fullName>PUT</fullName><default>false</default><label>PUT</label></value>
            <value><fullName>PATCH</fullName><default>false</default><label>PATCH</label></value>
            <value><fullName>DELETE</fullName><default>false</default><label>DELETE</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>HTTP method for the API call</description>
</CustomField>