force-app/main/default/objects/Integration_Endpoint__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <type>Text</type>
    <length>255</length>
    <description>Named Credential API name (preferred for auth)</description>
</CustomField>