force-app/main/default/objects/Integration_Endpoint__mdt/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <label>Path</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Resource path (supports {merge_fields})</description>
</CustomField>