force-app/main/default/objects/Integration_Endpoint__mdt/fields/Query_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Query_Parameters__c</fullName>
    <label>Query Parameters</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON string of default query parameters</description>
</CustomField>